ast/testdata/tests/errors/mappings/missing_ending_bracket.rql
mapping MappingName using Item {
    x -> y
